@@ -1,3 +1,6 @@
+1 September 2009: Wouter
+	- testbound variable arithmetic.
+
 31 August 2009: Wouter
 	- testbound variable processing.
 
